...
    <string name="currency_of_payment">Currency of payment</string>
    <string name="failed_to_obtain_price_breakdown_exceptionmessage_try_again_later">Failed to obtain price breakdown\n({exceptionMessage})\n Try again later</string>
    <string name="failed_to_get_required_payment_data">Failed to get required payment data</string>
    <string name="checkout">Checkout</string>
    <string name="loading">Loading</string>
    <string name="processing_payment">Processing payment</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="polar">Polar</string>
    <string name="polar_description">Pay with Polar</string>
    <string name="enter_email">Enter Email</string>
    <string name="email_required_for_receipt">Email required for receipt</string>
</resources>
